--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 .vscode-test/
 *.vsix
 
-.yarn/*
+.yarn/
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
@@ -15,3 +15,4 @@ node_modules
 # Documentation here: https://yarnpkg.com/features/zero-installs
 !.yarn/cache
 #.pnp.*
+.DS_Store
