some package manager update

--- a/webui/package.json
+++ b/webui/package.json
@@ -1,4 +1,7 @@
 {
   "name": "timelinenote",
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "vue": "^3.2.41"
+  }
 }
